<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".CrearNota">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/ayudaNombreNota"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/ayudaContenidoNota"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnAnadirNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="anadirNota"
        android:text="@string/guardarNota" />

</LinearLayout>