<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCrearNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="crearNota"
        android:padding="20dp"
        android:text="@string/crearNota" />

    <Button
        android:id="@+id/btnVerNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="buscarNota"
        android:padding="15dp"
        android:text="@string/buscarNota" />

    <Button
        android:id="@+id/btnBorrarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="borrarNota"
        android:padding="15dp"
        android:text="@string/borrarNota" />

</LinearLayout>